css/mystyle.css
/* banner image, topbar */
.banner {
  padding:0;
  position:relative;
  justify-content:center;
  overflow: hidden;
  min-height: 25vh;
  max-height:40vh;
  max-width:1100px;
  /*display: inline-block;*/
}

.banner-img {
  padding:0;
  position: relative;
  margin:0 auto;
  left:0;
  right:0;
  max-width:1100px;
  min-height: inherit;
  max-height:40vh;
  display: inline-block;
}

.adjustable {
  width:100%;
  /* img-size 2591*761 */
}

/* navbar */
div.navbar.transparent.navbar-default {
  margin-bottom:0;
  padding-bottom: 0;
  position:absolute;
  vertical-align: bottom;
  left:0px;
  right:0px;
  bottom:0px;
  background: rgba(0,0,0,0.4);
  max-width:1100px;
}

.navbar-brand {
  color:white!important;
  font-size:32px;
  padding-right:10px;
}

.active a{
  background: rgba(192,192,192,0.6)!important;
  color:white!important;

}
.nav.navbar-nav a {
  color:white!important;
}

/* sidebar */
.col-xs-4.sidebar {
  overflow: hidden;
  justify-content:center;
  max-width: 350px;
}


.adjustable-sidebar {
  max-width: 100%;
  padding:15px;
  background-size: cover;
}


.footer {
  background-color: black;
  color:gray;
  font-size:.5cm;
  text-align: center;
  vertical-align: middle;

  position:fixed;
  bottom:0;
  width:100%;
  height:.8cm;
}

body {
  background-color: rgb(4,32,41);
  color: gray;
}

